--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -6,7 +6,6 @@
 .blog__item {
     display: flex;
     gap: 2rem;
-    // max-height: 200px;
 }
 
 .blog__text {
@@ -14,25 +13,20 @@
 }
 
 .blog__number {
-    // font-size: clamp(2rem, 5vw, 3rem);
-    font-size: 3rem;
+    font-size: clamp(2rem, 5vw, 3rem);
     color: var(--clr-neutral-grey-blue);
     font-weight: var(--fw-regular);
 }
 
 .blog__headline {
-    font-size: 1.5rem;
-    // font-size: clamp(1.5rem, 2vw, 1.5rem);
+    font-size: clamp(1.5rem, 1vw,.5rem);
     font-weight: var(--fw-bold);
     color: var(--clr-neutral-dk-blue);
 }
 
-// .blog__description {
-//     // padding-right: 3rem; 
-// }
 
 .blog__image{
     max-height: 200px;
-    width: auto;
+    // width: auto;
     object-fit: cover;
 }
